Fix arrow alignment

--- a/css/sarah.css
+++ b/css/sarah.css
@@ -5793,17 +5793,23 @@ body {
   .media-item-content a {
     color: #ffffff;
     font-family: 'Ubuntu Mono', monospace;
-    text-decoration: underline; }
+    text-decoration: underline;
+    letter-spacing: 0.05em;
+    text-underline-position: under;
+    text-underline-offset: 2px;
+    text-decoration-thickness: 2px; }
     .media-item-content a:after {
       transition: 200ms ease;
       transition-property: transform;
       display: inline-block;
+      vertical-align: middle;
       content: "";
       width: 16px;
       height: 12px;
       margin-left: 12px;
       background: transparent url("../assets/images/arrow.png") no-repeat;
-      background-size: 16px 12px; }
+      background-size: 16px 12px;
+      background-position: left bottom; }
     .media-item-content a:hover:after {
       transform: translateX(3px); }
   @media screen and (min-width: 769px), print {
